# rust-graphqlexp

./: docker-compose.yml
backend/: .gitignore  Cargo.toml  graphqlexp-config-sample.toml
backend/graphqlexp-adapter/: Cargo.toml
backend/graphqlexp-adapter/src/: lib.rs  models.rs  modules.rs
backend/graphqlexp-adapter/src/persistence/: mod.rs
backend/graphqlexp-adapter/src/records/: mod.rs  profile.rs  servant.rs
backend/graphqlexp-adapter/src/repositories/: mod.rs  profile.rs  servant.rs
backend/graphqlexp-app/: Cargo.toml
backend/graphqlexp-app/src/: lib.rs  models.rs  modules.rs  repositories.rs
backend/graphqlexp-app/src/usecase/: list_servants.rs  mod.rs  register_servant.rs  show_servant.rs
backend/graphqlexp-app/src/usecase/profile/: listing.rs  mod.rs  registration.rs
backend/graphqlexp-app/src/usecase/servant/: fetching.rs  listing.rs  mod.rs  (+1 more)
backend/graphqlexp-kernel/: Cargo.toml
backend/graphqlexp-kernel/src/: lib.rs
backend/graphqlexp-kernel/src/models/: id.rs  mod.rs  profile.rs  servant.rs
backend/graphqlexp-kernel/src/repositories/: profile.rs  servant.rs
backend/graphqlexp-server/: Cargo.toml
backend/graphqlexp-server-rusty-gql/: Cargo.toml
backend/graphqlexp-server-rusty-gql/schema/: schema.graphql
backend/graphqlexp-server-rusty-gql/src/: config.rs  lib.rs  logger.rs  routes.rs
backend/graphqlexp-server-rusty-gql/src/graphql/: mod.rs
backend/graphqlexp-server/src/: config.rs  lib.rs  logger.rs  routes.rs  schema.rs
backend/graphqlexp-server/src/loaders/: map.rs  mod.rs  profile.rs
backend/graphqlexp-server/src/schema/: profile.rs  root.rs  servant.rs
database/: .envrc.sample  package-lock.json  package.json
database/prisma/: schema.prisma
database/prisma/migrations/20220103103711_create_servants/: migration.sql
database/prisma/migrations/20220130043609_fix_datatypes_on_servants/: migration.sql
database/prisma/migrations/20220210120324_add_profiles/: migration.sql
database/prisma/migrations/20220214132421_add_profiles/: migration.sql
database/prisma/migrations/20220330135944_create_servants_and_profiles/: migration.sql
frontend/: apollo.config.js  package.json
frontend/pages/servants/: [id].tsx  index.tsx
frontend/src/backend/: client.ts
(+6 files in other folders)
