[package]
name = "graphqlexp-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
chrono = "0.4.19"
graphqlexp-kernel = { path = "../graphqlexp-kernel" }
sqlx = { version = "0.5", features = ["chrono", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.15.0", features = ["rt", "macros"] }
