[package]
name = "graphqlexp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphqlexp-app = { path = "../graphqlexp-app" }
actix-rt = "2.6.0"
actix-web = "4.0.0-beta.20"
anyhow = "1.0.52"
juniper = "0.15.7"
juniper_actix = "0.4.0"
serde = "1.0.133"
serde_json = "1.0.78"
simplelog = "0.11.2"
structopt = "0.3.26"
tokio = { version = "1.15.0", features = ["fs", "macros", "rt-multi-thread"] }
toml = "0.5.8"
